test: I2C read and write parameters from LCD-push button using simple-incubator

--- a/platformio/simple-i2c-screen/platformio.ini
+++ b/platformio/simple-i2c-screen/platformio.ini
@@ -8,6 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; PlatformIO Core (CLI) settings:
 [platformio]
 default_envs = incubator_Upload_FTDI
 
@@ -43,7 +44,10 @@ lib_deps =
 	greiman/ChNil@^2017.8.2
 	arduino-libraries/LiquidCrystal@^1.0.7
   nicohood/PinChangeInterrupt@^1.2.9
-  
+
+
+; Run the following command to upload with this environment
+; pio run -e incubator_Upload_ISP -t upload
 [env:incubator_Upload_ISP]
 upload_protocol = custom
 upload_flags = 
@@ -52,8 +56,15 @@ upload_flags =
 	-p$BOARD_MCU
 	-cusbtiny
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
-lib_deps = nicohood/PinChangeInterrupt@^1.2.9
+lib_deps =
+  greiman/ChNil@^2017.8.2
+	arduino-libraries/LiquidCrystal@^1.0.7
+  nicohood/PinChangeInterrupt@^1.2.9
 
+; Run the following command to set fuses
+; pio run -e fuses_bootloader -t fuses
+; Run the following command to set fuses + burn bootloader
+; pio run -e fuses_bootloader -t bootloader
 [env:fuses_bootloader]
 board_hardware.oscillator = internal
 board_hardware.uart = uart0
@@ -65,6 +76,8 @@ upload_flags =
 	-e
 lib_deps = nicohood/PinChangeInterrupt@^1.2.9
 
+; Run the following command to burn bootloader with this environment
+; pio run -e program_via_USBtinyISP --target bootloader
 [env:program_via_USBtinyISP]
 board_hardware.oscillator = internal
 upload_protocol = custom
@@ -76,5 +89,5 @@ upload_flags =
 	atmega328p
 	-c
 	usbtiny
-upload_command = avrdude $UPLOAD_FLAGS -e -Ulock:w:0x3F:m -Uefuse:w:0b11111111:m -Uhfuse:w:0b11010110:m -Ulfuse:w:0xe2:m && avrdude $UPLOAD_FLAGS -U flash:w:${platformio.boards_dir}/optiboot_flash_atmega328p_UART0_38400_8000000L_B5.hex:i -Ulock:w:0x0F:m
-lib_deps = nicohood/PinChangeInterrupt@^1.2.9
+upload_command = avrdude $UPLOAD_FLAGS -e -Ulock:w:0x3F:m -Uefuse:w:0b11111111:m -Uhfuse:w:0b11010110:m -Ulfuse:w:0xe2:m && avrdude $UPLOAD_FLAGS -Uflash:w:${platformio.boards_dir}/optiboot_flash_atmega328p_UART0_38400_8000000L_B5.hex:i -Ulock:w:0x0F:m
+;lib_deps = nicohood/PinChangeInterrupt@^1.2.9
